# aws-ai-cdk-constructs

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/bedrock_knowledge_base/: app.py
src/aws_ai_cdk_constructs/: __init__.py  ai_proxy.py  bedrock_knowledge_base.py  model_artifacts.py  sagemaker_endpoint.py
src/aws_ai_cdk_constructs/_index_resource/: handler.py
tests/: test_bedrock_knowledge_base.py
