[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-ai-cdk-constructs"
version = "0.1.0"
description = "Opinionated AWS CDK L3 constructs for production AI/ML infrastructure"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ivandir Ndrio", email = "ivandir@maxminventures.com" }]
keywords = ["aws", "cdk", "bedrock", "sagemaker", "ai", "ml", "constructs", "infrastructure"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "aws-cdk-lib>=2.140.0,<3.0.0",
  "constructs>=10.0.0,<11.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.urls]
Homepage = "https://github.com/ivandir/aws-ai-cdk-constructs"
Issues = "https://github.com/ivandir/aws-ai-cdk-constructs/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/aws_ai_cdk_constructs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
